Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-11786] "Add explicit 'self.'" fix-it incorrectly offered for property of parent type #54196

Closed
hamishknight opened this issue Nov 15, 2019 · 1 comment
Assignees
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself diagnostics QoI Bug: Diagnostics Quality of Implementation type checker Area → compiler: Semantic analysis

Comments

@hamishknight
Copy link
Collaborator

Previous ID SR-11786
Radar None
Original Reporter @hamishknight
Type Bug
Status Closed
Resolution Done
Environment

Swift version 5.1.1-dev (Swift 1e8ab6db51)
Target: x86_64-apple-darwin19.0.0

Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug, DiagnosticsQoI, TypeChecker
Assignee @hamishknight
Priority Medium

md5: 07d9b9745decfbb48ca026f4d069ad12

Issue Description:

For the following:

struct S {
  var x = 0
  struct R {
    func foo() {
      let x = 0
      x += 1
    }
  }
}

We incorrectly offer the following fix-it:

main.swift:11:9: error: left side of mutating operator isn't mutable: 'x' is a 'let' constant [cannot_apply_lvalue_binop_to_subelement]
 x += 1
 ~ ^
main.swift:11:9: note: add explicit 'self.' to refer to mutable property of 'S.R' [masked_instance_variable]
 x += 1
 ^
 self.

We should only be offering this fix-it if the property is defined on the type which the method is a member of.

@hamishknight
Copy link
Collaborator Author

Fixed by #28288

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself diagnostics QoI Bug: Diagnostics Quality of Implementation type checker Area → compiler: Semantic analysis
Projects
None yet
Development

No branches or pull requests

1 participant