[CSDiagnostics] Use qualified lookup for 'self.' fix-it

We only want to look for properties on the type
which the method is a member of.

Resolves SR-11786.